--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		height: 45px;
 		position: absolute;
 		top:0;
-		background: red;
+		background: lightseagreen;
 	}
 	.contin{
 	/*	position: absolute;
@@ -37,7 +37,7 @@
 		height:100%;
 		padding :45px 0;
 		line-height: 4;
-		background: green;
+		background: orangered;
 		box-sizing:border-box;
 		overflow: auto;
 
