--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		height: 45px;
 		position: absolute;
 		top:0;
-		background: red;
+		background: lightseagreen;
 	}
 	.contin{
 	/*	position: absolute;
@@ -37,7 +37,7 @@
 		height:100%;
 		padding :45px 0;
 		line-height: 4;
-		background: green;
+		background: darkblue;
 		box-sizing:border-box;
 		overflow: auto;
 
@@ -52,6 +52,7 @@
 </style>
 <body>
 	 <div class="box">
+		 <p>2222222222222222222222222222</p>
 		<div class="head">ss</div>
 		<div class="contin">
 			1
