--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </style>
 <body>
 	 <div class="box">
-		 <p>33333333333333git </p>
+		git 
 		<div class="head">ss</div>
 		<div class="contin">
 			1
