--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 </style>
 <body>
 	 <div class="box">
-		 <p>2222222222222222222222222222</p>
+
 		<div class="head">ss</div>
 		<div class="contin">
 			1
 			<br/>
-			1
+			222
 			<br/>
 			1
 			<br/>
 			1
-			<br/>
+			<br/>git 
 			1
 			<br/>
 			1
